--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,7 +44,7 @@
 .glass {
   /* background-color: transparent !important; */
   background: rgba(255, 255, 255, 0.6) !important;
-
+  /* opacity: 0.6 !important; */
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px) !important;
   -webkit-backdrop-filter: blur(10px) !important;
