add profile icon

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -96,3 +96,12 @@
   text-align: center;
 }
 
+.ant-popover-inner {
+  /* background-color: transparent !important; */
+  background: rgba(255, 255, 255, 0.7) !important;
+  /* opacity: 0.6 !important; */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4px) !important;
+  -webkit-backdrop-filter: blur(4px) !important;
+  border: 1px solid rgba(255, 255, 255, 0.4) !important;
+}
