--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -105,3 +105,27 @@
   -webkit-backdrop-filter: blur(4px) !important;
   border: 1px solid rgba(255, 255, 255, 0.4) !important;
 }
+
+.typing-container{
+  display: inline-block;
+  font-family: "arial";
+  font-size: 24px;
+}
+
+.typing {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 0;
+  animation: typing;
+  animation-duration: 1.5s;
+  animation-timing-function: steps(30, end);
+  animation-fill-mode: forwards;
+}
+/* @keyframes cursor{
+  0%, 100%{border-color: transparent;}
+  50%{border-color: #000;}
+} */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
