--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -126,7 +126,7 @@
   white-space: nowrap;
   width: 0;
   animation: typing;
-  animation-duration: 1.5s;
+  animation-duration: 2s;
   animation-timing-function: steps(30, end);
   animation-fill-mode: forwards;
 }
@@ -138,3 +138,30 @@
   from { width: 0 }
   to { width: 100% }
 }
+
+.logoH::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  /* background: #ffee10; */
+  transition: .5s;
+  /* transform: scale(.9); */
+  z-index: -1;
+}
+
+.logoH:hover::before {
+  /* transform: scale(1); */
+  /* box-shadow: 0 0 15px #ffee10; */
+}
+
+.logoH:hover {
+  color: #ffee10;
+  /* transform: scale(1); */
+  /* box-shadow: 0 0 5px #ffee10; */
+  text-shadow: 1px 1px 5px #ffee10;
+}
+
