--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,14 +14,19 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+   /* background-color: #282c34; */
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px) !important;
+  -webkit-backdrop-filter: blur(10px) !important;
+  /* border: 1px solid rgba(255, 255, 255, 0.4) !important; */
+  border-radius: 10;
 }
 
 .App-link {
