add customer portal transfers

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -152,9 +152,9 @@
   /* text-shadow:  5px #ffee10; */
 }
 
-section {
+.section {
   /* color: #fff; */
-  text-align: center;
+  /* text-align: center; */
 }
 
 .div {
